<package>
  <name>cgcb_gazebo</name>
  <version>0.1.0</version>
  <description>cgcb_gazebo</description>
  <maintainer email="lothas@gmail.com">Jonathan Spitz</maintainer>

  <license>BSD</license>

  <author email="lothas@gmail.com">Jonathan Spitz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cgcb_description</run_depend>
  <run_depend>cgcb_control</run_depend> 
  <run_depend>cgazebo_ros</run_depend> 

  <export>
  </export>
</package>
