<?xml version="1.0"?>
<package>
  <name>tmj_control</name>
  <version>0.0.0</version>
  <description>The tmj_control package</description>

  <maintainer email="lothas@gmail.com">Jonathan Spitz</maintainer>

  <license>BSD</license>

  <author email="lothas@gmail.com">Jonathan Spitz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>
